# jomo-tlsn-sdk

./: .env  .firebaserc  .gitattributes  .gitignore  README.md  firebase.json  package-lock.json  package.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
public/: index.html  manifest.json  wasm_worker.js  workerHelpers.js
public/pkg/: wasm_lib.d.ts  wasm_lib.js
public/pkg-backup/: wasm_lib.js  wasm_lib_bg.wasm.d.ts
public/pkg-mt/: wasm_lib.d.ts  wasm_lib.js  wasm_lib_bg.wasm.d.ts
sdk-js/: package-lock.json  package.json
sdk-js/src/: index.ts
sdk-js/src/components/: OpenLayerClientSDK.tsx
sdk-js/src/static/pkg-mt/: wasm_lib.d.ts  wasm_lib_bg.wasm.d.ts
sdk-node/: index.js  package.json
sdk/src/: index.ts
sdk/src/static/pkg-mt/: wasm_lib.d.ts  wasm_lib_bg.wasm.d.ts
src/: App.js  index.js  setupProxy.js
src/pages/: Prove.tsx  ProveNavBar.tsx
src/pages/prove/: ProveNotarization.tsx
src/pages/prove/notarization/: CoinbaseUser.tsx  CoinbaseUserNewSdk.tsx  LinkedInConnectionsNewSdk.tsx  RevolutLastPayment.tsx  RevolutLastPaymentNewSdk.tsx  RobinhoodRoi.tsx  Venmo.tsx  utils.tsx
src/sdk/: package.json
src/sdk-js/: package-lock.json  package.json  tsconfig.json
src/sdk-js/src/: index.ts
src/sdk-js/src/components/: OpenLayerSDK.tsx  utils.tsx
src/sdk-js/src/static/: wasm_worker.js
src/sdk-js/src/static/pkg-mt/: wasm_lib.js
src/sdk/src/components/: JomoTlsnNotary.tsx  utils.tsx
src/sdk/src/static/pkg-mt/: wasm_lib.js
src/utils/: time.js
verifier_server/: .firebaserc  firebase.json  package-lock.json  package.json
verifier_server/server/: index.js  package.json  verify_proof.js
wasm-lib/: Cargo.toml  rust-toolchain
wasm-lib/src/: lib.rs  requests.rs
wasm-verifier-lib/: Cargo.toml
wasm-verifier-lib/pkg/: wasm_verifier_lib_bg.wasm
